--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -20,12 +20,17 @@
 
 .buttons {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   column-gap: 5%;
 }
 
-.button_nav {
-  margin-left: 1rem;
-  margin-right: 1rem;
+@media screen and (max-width: 675px) {
+  .button_banner {
+    flex: 0 0 75%;
+  }
+  .buttons {
+    row-gap: 1.5rem;
+  }
 }
